# essay-grading

./: .env.example  .gitignore  404.html  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
assets/: index-BE6Hsjb5.css  index-CmQKDG-k.js  index-DENFRcSY.js  index-DmLUpQes.css  node.browser-W4e5Dz7d.js  node.browser-YwYypX_Q.js
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: admin.py  auth.py  chat.py  content.py  export.py  fr.py  grading.py  scenario.py  sessions.py
backend/app/core/: llm.py  security.py
backend/app/db/: database.py  seed.py  seed_content.py
backend/app/services/: jobs.py  llm_bridge.py  loaders.py  report_parser.py  reports.py  runner.py  scoring.py  session.py  thinking.py  writing_process.py
backend/app/services/grading/: aggregate.py  divergence.py  engine.py  exemplars.py  layerb.py  prompts.py
backend/tests/: conftest.py  test_aggregate.py  test_assessment_export_schema.py  test_auth.py  test_byo_key.py  test_content.py  test_divergence.py  test_e2e_smoke.py  test_exemplars.py  test_fr_api.py  test_fr_closing_nudge_and_coverage_note.py  test_fr_pooled_key_points.py  test_fr_thinking_profile_solo.py  test_grading_api.py  test_prompt_inventory.py  test_research_surface.py  test_scenario_api.py  test_writing_process_calibration.py
docs/: construct-map.md  evidence-model.md  fr_evidence_model.md  research_export_data_dictionary.md  testing_and_validation.md
frontend/: index.html  package-lock.json  (+2 more)
(+55 files in other folders)
